# rf5g-sizing

./: .claude_review_diff.txt  .gitignore  .tmp_review_scope.diff  BACKLOG.md  CHANGELOG.md  COMPARISON_REPORT.md  FINAL-REPORT.md  IMPLEMENTATION_LOG.md  INSTALL_GUIDE.md  LICENSE  PLANNING_GUIDE.md  PRD.md  README.md  RELEASE_CHECKLIST.md  ROADMAP.md  USER_GUIDE.md  VERIFICATION_REPORT.md  WORKFLOW.md  pyproject.toml  rf5g_coverage_Suburban_n77.html  rf5g_coverage_map.html  rf5g_coverage_untitled.html  rf5g_report_Dense_Urban_n78.html  rf5g_report_Dense_Urban_n78.md  rf5g_report_Suburban_n77.html  rf5g_report_Suburban_n77.md  rf5g_report_untitled.html  rf5g_report_untitled.md  rf5g_verification_report.html  test_map.html  verify_phase1.py  verify_phase4.py  verify_prd_full.py
.github/ISSUE_TEMPLATE/: config.yml  docs-workflow.yml  feature.yml  release-checklist.yml  test-regression.yml
.github/tracking-issues/: README.md  milestone-1-core-trust-product-coherence.md  milestone-2-workflow-simplification-ux.md  milestone-3-geometry-aware-planning-flagship.md  milestone-4-equipment-realism-catalog-trust.md  milestone-5-decision-support-release-readiness.md
build_installer/: build.bat  requirements.txt  rf5g-setup.iss  run_rf5g.bat
build_installer/python-embed/: python312._pth
examples/: README.md  capacity_hotspot_n78.json  indoor_hotspot_n77.json
rf5g/: __init__.py  cli.py
rf5g.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
rf5g/api/: app.py
rf5g/data/: bands.json  qos_requirements.json  radio_antenna_catalog.json
(+66 files in other folders)
