[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rf5g"
version = "0.1.0"
description = "5G NR RF Coverage Sizing Tool — 3GPP TR 38.901 propagation models, link budget, site estimation, QoS verification"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [{name = "nhnam"}]
keywords = ["5g", "nr", "rf", "coverage", "sizing", "propagation", "3gpp"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Telecommunications Industry",
    "Topic :: Scientific/Engineering :: Telecommunications",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "pydantic>=2.0",
    "typer>=0.9",
    "rich>=13.0",
    "numpy>=1.24",
    "scipy>=1.11",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
viz = ["folium>=0.14", "matplotlib>=3.7", "jinja2>=3.1"]
web = ["fastapi>=0.100", "uvicorn>=0.23", "streamlit>=1.25"]
dev = ["pytest>=7.0", "pytest-cov>=4.0", "hypothesis>=6.80"]

[project.scripts]
rf5g = "rf5g.cli:app"

[tool.setuptools.packages.find]
include = ["rf5g*"]

[tool.setuptools.package-data]
rf5g = ["data/*.json"]

[tool.pytest.ini_options]
testpaths = ["rf5g/tests"]
addopts = "-v --tb=short"